--- a/odooCustomization/views/product_categories.xml
+++ b/odooCustomization/views/product_categories.xml
@@ -37,8 +37,26 @@
                   </group>
                 </group>
             </xpath>
+
+            	<xpath expr="//field[@name='list_price']" position="before">
+				<field name="nehr_id"/>
+			</xpath>
             </field>
         </record>
+
+
+<record id="view_product_tree_inherit" model="ir.ui.view">
+            <field name="name">product.template.common.tree.inherit</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_tree_view"/>
+            <field name="arch" type="xml">
+    
+ <field name="name" position="before">
+<field name="nehr_id"/>
+ </field>
+            </field>
+        </record>
+
 
        <record id="product_template_search_view_custom" model="ir.ui.view">
 	<field name="name">Product template custom search</field>
