--- a/odooCustomization/views/account_invoice_report_view_custom.xml
+++ b/odooCustomization/views/account_invoice_report_view_custom.xml
@@ -10,6 +10,7 @@
            <pivot string="Invoices Analysis" disable_linking="True">
                  <field name="categ_id" type="row"/>
                   <field name="user_id" type="col"/>
+                  <field name="journal_id" type="col"/>
                  <field name="price_total" type="measure"/>
              </pivot>
             </field>
