--- a/odooCustomization/views/stock_production_lot.xml
+++ b/odooCustomization/views/stock_production_lot.xml
@@ -16,7 +16,7 @@
             
                 <xpath expr="//field[@name='product_id']" position="after">
                      <field name="life_date"/>
-                     <field name="expired_state" />
+                     <field name="expired_state" invisible="1" />
                 </xpath>
             </field>
         </record>
