--- a/odooCustomization/views/stock_picking.xml
+++ b/odooCustomization/views/stock_picking.xml
@@ -6,6 +6,10 @@
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
+
+            <!-- <field name="product_id" position="after">
+            <filed name ="availability"/>
+            </field> -->
  <xpath expr="//notebook" position="after">
  <group>
                	<group name="group_left">
@@ -13,7 +17,7 @@
                       </group>
               	<group name="group_right">
 
-                    <field name="x_amount_total" />
+                    <field name="x_amount_with_tax" />
                    
                   </group>
                 </group>
@@ -22,6 +26,18 @@
           
             </field>
         </record>
+
+    <!-- <record id="payment_type_account_invoice_tree_view" model="ir.ui.view">
+        <field name="name">stock.view_picking_tree.inherit</field>
+        <field name="model">stock.picking</field>
+        <field name="view_mode">tree,kanban,form,calendar,pivot,graph</field>
+        <field name="inherit_id" ref="astock.view_picking_form"/>
+        <field name="arch" type="xml">
+            <field name="origin" position="after">
+                <field name="payment_type" />
+            </field>
+        </field>
+    </record> -->
 
 
    
