--- a/odooCustomization/views/sale_order_view.xml
+++ b/odooCustomization/views/sale_order_view.xml
@@ -6,7 +6,9 @@
 		<field name="model">sale.order</field>
 		<field name="inherit_id" ref="sale.view_order_form"/>
 		<field name="arch" type="xml">
-		
+		<field name ="partner_id" position="replace">
+<field name ="partner_id" options="{'no_quick_create': True,'no_create_edit':True}"/>
+</field>
 			<xpath expr="//field[@name='order_line']/tree/field[@name='lot_id']" position="replace">
 				<field name="lot_id" domain="[('product_id', '=', product_id),('expired_state', '!=', 'EXPIRED')]"/>
                
@@ -15,10 +17,44 @@
 				<field name="lot_id"  domain="[('product_id', '=', product_id),('expired_state', '!=', 'EXPIRED')]"/>
 			</xpath>
 			
+<xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="replace">
+                                <field name="product_id" options="{'no_quick_create': True,'no_create_edit':True}"
+                                       context="{'partner_id':parent.partner_id, 'quantity':product_uom_qty, 'pricelist':parent.pricelist_id, 'uom':product_uom, 'company_id': parent.company_id}"/><!--attrs="{'readonly': ['|', ('qty_invoiced', '&gt;', 0), ('procurement_ids', '!=', [])]}"-->
+                        </xpath>
+
 
             
 		</field>
 	</record>
 	
+
+		<record id="inherit_quotation_tree_view_logged_user" model="ir.ui.view">
+		<field name="name">inherit.quotation.tree.logged</field>
+		<field name="model">sale.order</field>
+		<field name="inherit_id" ref="sale.view_quotation_tree"/>
+	
+		<field name="arch" type="xml">
+			<xpath expr="//field[@name='partner_id']" position="after">
+			    <field name="payment_type"/>
+			</xpath>
+		</field>
+	</record>
+
+
+		<record id="sale_order_view_search_inherit_sale_quotation" model="ir.ui.view">
+		<field name="name">sale.order.search.inherit.sale.quotation</field>
+		<field name="model">sale.order</field>
+		<field name="inherit_id" ref="sale.sale_order_view_search_inherit_quotation"/>
+	
+		<field name="arch" type="xml">
+		<xpath expr="//filter[@name='my_sale_orders_filter']" position="after">
+                    <separator/>
+                    <filter string="Pharmacy" name="pharmacy" domain="[('shop_id','=','Pharmacy')]"/>
+                    <filter string="Registration" name="registration" domain="[('shop_id','=','Registration')]"/>
+                </xpath>
+		</field>
+	</record>
+
+
 
 </odoo>
