--- a/odooCustomization/views/sale_order_view.xml
+++ b/odooCustomization/views/sale_order_view.xml
@@ -54,7 +54,18 @@
                 </xpath>
 		</field>
 	</record>
+	<record id="view_sales_order_filter_custom" model="ir.ui.view">
+            <field name="name">sale.order.list.select.custom</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_sales_order_filter"/>
+            <field name="arch" type="xml">
+            	<field name="name" position="replace" >   
+					<field name="partner_id" operator="child_of"/>
+					 <field name="name" string="Order" filter_domain="['|', '|', ('name', 'ilike', self), ('client_order_ref', 'ilike', self), ('partner_id', 'child_of', self)]"/>
 
+				</field>
+            </field>
+        </record>
 
 
 </odoo>
