--- a/odooCustomization/views/stock_production_lot.xml
+++ b/odooCustomization/views/stock_production_lot.xml
@@ -13,14 +13,14 @@
                 </xpath>
             
                 <xpath expr="//field[@name='product_id']" position="after">
-                     <field name="life_date"  />
+                     <field name="life_date"  /> 
                      <field name="expired_state" invisible="1"/>
                      <field name="stock_forecast" invisible="1" /> 
                 </xpath>
             </field>
         </record>
  <record id="stock.action_production_lot_form" model="ir.actions.act_window">
-       <field name="domain">[('stock_forecast','>',0.0)]</field>
+       <field name="domain">[('stock_forecast_temp','>',0.0)]</field>
 
    </record>
 <data>
