--- a/odooCustomization/views/sale_order_view.xml
+++ b/odooCustomization/views/sale_order_view.xml
@@ -10,11 +10,11 @@
 <field name ="partner_id" options="{'no_quick_create': True,'no_create_edit':True}"/>
 </field>
 			<xpath expr="//field[@name='order_line']/tree/field[@name='lot_id']" position="replace">
-				<field name="lot_id" domain="[('product_id', '=', product_id),('expired_state', '!=', 'EXPIRED')]"/>
+				<field name="lot_id" domain="[('product_id', '=', product_id),('expired_state', '!=', 'EXPIRED'),('stock_forecast_temp','>',0)]"/>
                
 			</xpath>
 			<xpath expr="//field[@name='order_line']/form/group/group/field[@name='lot_id']" position="replace">
-				<field name="lot_id"  domain="[('product_id', '=', product_id),('expired_state', '!=', 'EXPIRED')]"/>
+				<field name="lot_id"  domain="[('product_id', '=', product_id),('expired_state', '!=', 'EXPIRED'),('stock_forecast_temp','>',0)]"/>
 			</xpath>
 			
 <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']" position="replace">
