made available forecast in tree view readonly

--- a/odooCustomization/views/stock_picking.xml
+++ b/odooCustomization/views/stock_picking.xml
@@ -33,7 +33,7 @@
             <field name="arch" type="xml"> 
  
 <field name="product_uom_qty"  position ="after">    
-				<field name="available_qty" />         
+				<field name="available_qty" readonly="1"/>         
                 </field>
 			 
          </field>
