--- a/odooCustomization/views/stock_production_lot.xml
+++ b/odooCustomization/views/stock_production_lot.xml
@@ -8,6 +8,8 @@
             <field name="inherit_id" ref="stock.view_production_lot_tree"/>
             <field name="arch" type="xml">
 
+ 
+
               <xpath expr="//tree" position="attributes">
                 <attribute name="colors">red:expired_state in ('EXPIRED');green:expired_state in ('TOEXPIRED')</attribute>
                 </xpath>
@@ -15,10 +17,27 @@
                 <xpath expr="//field[@name='product_id']" position="after">
                      <field name="life_date"  /> 
                      <field name="expired_state" invisible="1"/>
-                     <field name="stock_forecast" invisible="1" /> 
-                     <field name="stock_forecast_temp"  /> 
+                     <field name="stock_forecast" invisible="1" />
                 </xpath>
 
+                
+            </field>
+            
+        </record>
+
+<record id="view_production_lot_form_inherit" model="ir.ui.view">
+            <field name="name">stock.production.lot.form.inherit</field>
+            <field name="model">stock.production.lot</field>
+            <field name="inherit_id" ref="stock.view_production_lot_form"/>
+            <field name="arch" type="xml">
+
+
+            <xpath expr="//div[@class='oe_button_box']" position="inside">
+              <button name="toggle_active" type="object" class="oe_stat_button" icon="fa-archive">
+                      <field name="active" widget="boolean_button" options='{"terminology": "archive"}'/>
+              </button>
+            </xpath>
+ 
                 
             </field>
             
@@ -31,6 +50,7 @@
             <search>
     <filter string="Non Zero Lots" name="non_zero_lot"
         domain="[('stock_forecast_temp','>',0)]"/>
+          <filter string="Archived" name="inactive" domain="[('active','=',False)]"/>
 </search>
             </field>
             </record>
