--- a/odooCustomization/views/stock_quant.xml
+++ b/odooCustomization/views/stock_quant.xml
@@ -8,9 +8,9 @@
             <field name="model">stock.quant</field>
             <field name="inherit_id" ref="stock.view_stock_quant_tree"/>
             <field name="arch" type="xml">
-
-            
+ 
                 <xpath expr="//field[@name='lot_id']" position="after">
+                  
                      <field name="x_available_total_store"/>
                      <field name="x_available_total_pharma"/>
                 </xpath>
@@ -32,4 +32,23 @@
         </record>
 
 </data>
+
+<record model="ir.ui.view" id="custom_stock_quant_search">
+            <field name="name">custom.stock.quant.search</field>
+            <field name="model">stock.quant</field> 
+            <field name="inherit_id" ref="stock.quant_search_view"/>
+            <field name="arch" type="xml">
+            <search>
+    
+          <filter string="Archived" name="inactive" domain="[('active','=',False)]"/>
+</search>
+            </field>
+            </record>
+       
+
+   <template id="assets_backend" name="stock_quant_tree_view_button" inherit_id="web.assets_backend">
+                  <xpath expr="." position="inside">
+                        <script type="text/javascript" src="/odooCustomization/static/src/js/stock_quant_tree_view_button.js"></script>
+                  </xpath>
+            </template>
 </odoo>
