age, gender and address from openmrs to customer invoice

--- a/odooCustomization/views/partnerCusotmization.xml
+++ b/odooCustomization/views/partnerCusotmization.xml
@@ -6,16 +6,25 @@
             <field name="name">res.partner.snp.form.inherit</field>
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
-            <field name="arch" type="xml">
-
-
-            
- <group name="purchase" position="inside">
- <field name="is_supplier"/>
- <field name="supplier_category" attrs="{'invisible':[('is_supplier', '!=', True)]}"/>
- </group>
+            <field name="arch" type="xml">           
+                <group name="purchase" position="inside">
+                <field name="is_supplier"/>
+                <field name="supplier_category" attrs="{'invisible':[('is_supplier', '!=', True)]}"/>
+                </group>
             </field>
         </record>
+
+
+<record id="res_partner_customer_form_inherit" model="ir.ui.view">
+            <field name="name">res.partner.customer.form.inherit</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="base.view_partner_form"/>
+            <field name="arch" type="xml">
+                <group>
+                <field name="detail_address"/> 
+                </group>
+            </field>
+        </record>        
 </data>
 
 </odoo>
